feat(api):添加axios的配置

--- a/template/package.json
+++ b/template/package.json
@@ -28,7 +28,8 @@
     "vue": "^2.5.2"{{#router}},
     "vue-router": "^3.0.1"{{/router}}{{#element}},
     "element-ui": "^2.11.0"{{/element}}{{#vuex}},
-    "vuex": "^2.4.0"{{/vuex}}
+    "vuex": "^2.4.0"{{/vuex}}{{#axios}},
+    "axios": "^0.15.3"{{/axios}}
   },
   "devDependencies": {
     {{#lint}}
