--- a/template/package.json
+++ b/template/package.json
@@ -119,7 +119,11 @@
     "portfinder": "^1.0.13",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    {{#sass}}
+    "sass-loader":"*",
+    "node-sass":"*",
+    {{/sass}}
   },
   "engines": {
     "node": ">= 6.0.0",
