fix(format):调整main.js里面模块的位置

--- a/template/package.json
+++ b/template/package.json
@@ -122,7 +122,7 @@
     "webpack-merge": "^4.1.0",
     {{#sass}}
     "sass-loader":"*",
-    "node-sass":"*",
+    "node-sass":"*"
     {{/sass}}
   },
   "engines": {
